2010-09-14  Pierre-Antoine LaFayette  <plafayet@codeaurora.org>

Reviewed by Darin Adler.

        REGRESSION (r52839): Incomplete repaint of IMG with text-align:center
        https://bugs.webkit.org/show_bug.cgi?id=40142

        Add pixel tests to verify proper repaint of RenderReplaced as well as non-inline children.

        * fast/repaint/block-layout-inline-children-float-positioned.html: Added.
        * fast/repaint/block-layout-inline-children-replaced.html: Added.
        * platform/mac/fast/repaint/block-layout-inline-children-float-positioned-expected.checksum: Added.
        * platform/mac/fast/repaint/block-layout-inline-children-float-positioned-expected.png: Added.
        * platform/mac/fast/repaint/block-layout-inline-children-float-positioned-expected.txt: Added.
        * platform/mac/fast/repaint/block-layout-inline-children-replaced-expected.checksum: Added.
        * platform/mac/fast/repaint/block-layout-inline-children-replaced-expected.png: Added.
        * platform/mac/fast/repaint/block-layout-inline-children-replaced-expected.txt: Added.
2010-09-14  Pierre-Antoine LaFayette  <plafayet@codeaurora.org>

        Reviewed by Darin Adler.

        REGRESSION (r52839): Incomplete repaint of IMG with text-align:center
        https://bugs.webkit.org/show_bug.cgi?id=40142

        http://trac.webkit.org/changeset/52839 didn't really deal with the inline replaced element case.  This just generalizes to all inline content.

        Patch by: Dave Hyatt

        Tests: fast/repaint/block-layout-inline-children-float-positioned.html
               fast/repaint/block-layout-inline-children-replaced.html

        * rendering/RenderBlockLineLayout.cpp:
        (WebCore::RenderBlock::layoutInlineChildren):

git-svn-id: svn://svn.chromium.org/blink/trunk@67463 bbb929c8-8fbe-4397-9dbb-9b2b20218538